[Fix] Create DB in STG if not exist

--- a/Enviroment/.env
+++ b/Enviroment/.env
@@ -1,11 +1,25 @@
+# Server MariaDB STG
 MARIADB_SERVER_STG=STG_MariaDB
 USERNAME_MARIADB_STG=tanke
 PASSWORD_MARIADB_STG=tanke
 PASSWORD_ROOT_MARIADB_STG=toor
+
+# Server MariaDB PRD
 MARIADB_SERVER_PRD=PRD_MariaDB
 USERNAME_MARIADB_PRD=tankeprd
 PASSWORD_MARIADB_PRD=tankeprd
 PASSWORD_ROOT_MARIADB_PRD=toorprd
+
+# Servicio PHPMYADMIN para los servicios de MariaDB
 PHPMYADMIN_CONTAINER_NAME=phpmyadmin
 PHPMYADMIN_PORT=8081
+
+
+# Servidor de httpd para los servicios de PHP
+HTTPD_CONTAINER_NAME=httpd
+HTTPD_PORT=8080
+
+# Servicio de Api en python 
+PYTHON_CONTAINER_NAME=api
+PYTHON_PORT=8000
 
